--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,65 @@
-# Arquivos Python
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+.env
+
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDEs e editores
+.idea/
+.vscode/
+*.swp
+*.swo
+.DS_Store
+
+# Docker
+.docker/
+docker-compose.override.yml
+
+# Banco de dados
+*.sqlite3
+postgres_data/
+
+# Logs
+*.log
+prometheus_data/
+grafana_data/
 
 # Ambiente virtual
 venv/
 env/
 ENV/
 
-# Arquivo de dados da agenda
+# Arquivos de dados da agenda
 contatos.json
+compromissos.json
 
 # Arquivos do sistema
-.DS_Store
 Thumbs.db 
